@@ -5,7 +5,6 @@ TODO list for ph-scale (HTML5)
 IMPLEMENTATION
 
 HIGH
-- same location and size for all beakers, shorter so dropper isn't in solution
 - Solutions: implement linear graph
 - animate auto-filling
 
